test/typecheck/errors/bad-identifier6.boa
f := function(int: _0abc) : bool { return true; };
